[package]
name = "arceos-hashmap"
version = "0.4.1"
edition = "2024"
authors = ["Lei Shi <shi_lei@massclouds.com>", "Yu Chen <yuchen@tsinghua.edu.cn>", "Yifan Wang <w-yf22@mails.tsinghua.edu.cn>"]
description = "Exercise about supporting HashMap for ArceOS"
license = "GPL-3.0"
homepage = "https://github.com/arceos-org/exercise-hashmap"
repository = "https://github.com/arceos-org/exercise-hashmap"
keywords = ["arceos", "exercise", "hashmap"]
categories = ["os", "no-std"]

[features]
default = ["axstd"]
axstd = ["dep:axstd"]
xtask = ["dep:clap"]

[[bin]]
name = "xtask"
path = "xtask/src/main.rs"
required-features = ["xtask"]

[dependencies]
axstd = { version = "=0.3.0-preview.1", features = ["defplat", "alloc"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[profile.release]
